--- a/Lab1/about.html
+++ b/Lab1/about.html
@@ -10,8 +10,9 @@
   </head>
   <body>
     <main>
-      <h1>About</h1>  
-      <p>New content</p>
+      <h1>About page</h1>  
+      <h2>A little about me.</h2>
+      <p>My names isaiah. im 29 years old and im taking programming classes at butte college.</p>
       <a href="./">Home</a>
     </main>
   <script src="index.js"></script>
