--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <main>
-      <h1>Welcome to My Website</h1>  
+      <h1>Welcome to My Website!</h1>  
       <p>Here you will find:</p>
       <ul>
         <li>Why it's important to take your supplements</li>
@@ -18,7 +18,9 @@
         <li>Convenient ways to stay healthy. Lots of us take our health for granted untill its to late to do anything about it. Id like to list practical steps you can take to avoid this. </li>
       </ul>
       <a href="./about.html">About</a>
-    </main>
+      <br>
+      <a href="./interests.html">interests</a>
+    </main><img src="2014_0412_016.jpg" alt="">
   <script src="index.js"></script>
   </body>
 </html>
