--- a/Lab1/interests.html
+++ b/Lab1/interests.html
@@ -10,13 +10,14 @@
   </head>
   <body>
     <main>
-      <h1>Welcome to My Website</h1>  
-      <p>Here you will find:</p>
+      <h1>Welcome to Isaiah's website!</h1>  
+      <h3>You can find more about me here, and my interests such as..</h3>
       <ul>
-        <li>Why it's important to visit Grandma</li>
-        <li>Things you forgot to do today</li>
-        <li>Convenient distractions </li>
-      </ul>
+        <li>Why it's important to take vitimans!</li>
+        <li>Building computers!</li>
+        <li>Playing video games.</li>
+      </ul> 
+      <a href="./index.html">Home</a>
     </main>
   <script src="index.js"></script>
   </body>
