Changes made to html tags and format. Color added as well.

--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <main>
+      <div>
       <h1>Welcome to My Website!</h1>  
       <p>Here you will find:</p>
       <ul>
@@ -17,6 +18,7 @@
         <li>Things to be thankful for today</li>
         <li>Convenient ways to stay healthy. Lots of us take our health for granted untill its to late to do anything about it. Id like to list practical steps you can take to avoid this. </li>
       </ul>
+      <div>
       <a href="./about.html">About</a>
       <br>
       <a href="./interests.html">interests</a>
